Add play music button and background audio
Added a button to play background music and included audio element for the music track.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,65 @@ p{
   font-size:20px;
   margin-top:15px;
 }
+button{
+  margin-top:20px;
+  padding:10px 20px;
+  font-size:18px;
+  background: #ffcc00;
+  border: none;
+  border-radius:8px;
+  cursor:pointer;
+  animation: glowBtn 2s infinite alternate;
+}
 @keyframes glow{
   from{ text-shadow:0 0 10px gold; }
+  to{ text-shadow:0 0 30px red, 0 0 60px yellow; }
+}
+@keyframes glowBtn{
+  from{ box-shadow: 0 0 5px #ffcc00; }
+  to{ box-shadow: 0 0 20px #ff0000; }
+}
+.firework{
+  position:absolute;
+  width:6px;
+  height:6px;
+  animation: explode 1.5s infinite;
+}
+@keyframes explode{
+  0%{ box-shadow:none; }
+  100%{
+    box-shadow:
+    0 -120px red,
+    85px -85px yellow,
+    120px 0 cyan,
+    85px 85px lime,
+    0 120px magenta,
+    -85px 85px orange,
+    -120px 0 white,
+    -85px -85px pink;
+  }
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+  <h1>🎉 শুভ নববর্ষ ২০২৬ 🎉</h1>
+  <p>নতুন বছর হোক আনন্দ, শান্তি ও সফলতায় ভরা ✨</p>
+  <div class="from">— শুভেচ্ছায়: জীবন খান</div>
+  <button onclick="document.getElementById('bgMusic').play()">🎵 Play Music</button>
+</div>
+
+<div class="firework"></div>
+
+<!-- Background Music -->
+<audio id="bgMusic" loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
+
+</body>
+</html>  from{ text-shadow:0 0 10px gold; }
   to{ text-shadow:0 0 30px red, 0 0 60px yellow; }
 }
 .firework{
