--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
 <style>
 body{
   margin:0;
+  padding:0;
   height:100vh;
   background:black;
+  font-family: 'Noto Sans Bengali', sans-serif;
   display:flex;
   justify-content:center;
   align-items:center;
   overflow:hidden;
-  font-family: 'Noto Sans Bengali', sans-serif;
+  color:white;
 }
 .container{
   text-align:center;
+  max-width:800px;
   z-index:2;
-  max-width: 800px;
 }
 h1{
   color: gold;
-  font-size: 58px;
+  font-size: 60px;
   animation: glow 2s infinite alternate;
+  margin-bottom: 20px;
 }
 p{
-  color: white;
   font-size: 20px;
   line-height:1.6;
-  margin-top: 15px;
+  margin-bottom: 25px;
   text-align: justify;
 }
 #from-name{
@@ -38,10 +40,10 @@ p{
 }
 button{
   margin-top:20px;
-  padding:10px 20px;
+  padding:10px 25px;
   font-size:18px;
   background: #ffcc00;
-  border: none;
+  border:none;
   border-radius:8px;
   cursor:pointer;
   animation: glowBtn 2s infinite alternate;
@@ -99,7 +101,7 @@ button{
 </audio>
 
 <script>
-// ৭ জনের নাম
+// ৭ জনের নাম লুপ
 const members = ["জীবন", "তারেক", "রাশিদা", "সুমন", "নাফিসা", "সাবের", "আলী"];
 let i = 0;
 function showName(){
@@ -109,104 +111,6 @@ function showName(){
 }
 setInterval(showName, 3000); // প্রতি ৩ সেকেন্ডে নাম পরিবর্তন
 </script>
-
-</body>
-</html>  margin-top:20px;
-  padding:10px 20px;
-  font-size:18px;
-  background: #ffcc00;
-  border: none;
-  border-radius:8px;
-  cursor:pointer;
-  animation: glowBtn 2s infinite alternate;
-}
-@keyframes glow{
-  from{ text-shadow:0 0 10px gold; }
-  to{ text-shadow:0 0 30px red, 0 0 60px yellow; }
-}
-@keyframes glowBtn{
-  from{ box-shadow: 0 0 5px #ffcc00; }
-  to{ box-shadow: 0 0 20px #ff0000; }
-}
-.firework{
-  position:absolute;
-  width:6px;
-  height:6px;
-  animation: explode 1.5s infinite;
-}
-@keyframes explode{
-  0%{ box-shadow:none; }
-  100%{
-    box-shadow:
-    0 -120px red,
-    85px -85px yellow,
-    120px 0 cyan,
-    85px 85px lime,
-    0 120px magenta,
-    -85px 85px orange,
-    -120px 0 white,
-    -85px -85px pink;
-  }
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-  <h1>🎉 শুভ নববর্ষ ২০২৬ 🎉</h1>
-  <p>নতুন বছর হোক আনন্দ, শান্তি ও সফলতায় ভরা ✨</p>
-  <div class="from">— শুভেচ্ছায়: জীবন খান</div>
-  <button onclick="document.getElementById('bgMusic').play()">🎵 Play Music</button>
-</div>
-
-<div class="firework"></div>
-
-<!-- Background Music -->
-<audio id="bgMusic" loop>
-  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-</audio>
-
-</body>
-</html>  from{ text-shadow:0 0 10px gold; }
-  to{ text-shadow:0 0 30px red, 0 0 60px yellow; }
-}
-.firework{
-  position:absolute;
-  width:6px;
-  height:6px;
-  animation: explode 1.5s infinite;
-}
-@keyframes explode{
-  0%{ box-shadow:none; }
-  100%{
-    box-shadow:
-    0 -120px red,
-    85px -85px yellow,
-    120px 0 cyan,
-    85px 85px lime,
-    0 120px magenta,
-    -85px 85px orange,
-    -120px 0 white,
-    -85px -85px pink;
-  }
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-  <h1>🎉 শুভ নববর্ষ ২০২৬ 🎉</h1>
-  <p>নতুন বছর হোক আনন্দ, শান্তি ও সফলতায় ভরা ✨</p>
-  <div class="from">— শুভেচ্ছায়: জীবন খান</div>
-</div>
-
-<div class="firework"></div>
-
-<audio autoplay loop>
-  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-</audio>
 
 </body>
 </html>
