--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>শুভ নববর্ষ ২০২৬</title>
+<title>Happy New Year 2026</title>
+<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&display=swap" rel="stylesheet">
 <style>
 body{
   margin:0;
   padding:0;
   height:100vh;
-  background:black;
-  font-family: 'Noto Sans Bengali', sans-serif;
+  background: linear-gradient(135deg, #1a1a1a, #000000);
+  font-family: 'Gemunu Libre', sans-serif;
   display:flex;
   justify-content:center;
   align-items:center;
@@ -18,23 +19,136 @@ body{
 }
 .container{
   text-align:center;
-  max-width:800px;
-  z-index:2;
+  max-width:900px;
+  padding: 30px;
+  background: rgba(0,0,0,0.6);
+  border-radius:20px;
+  box-shadow: 0 0 30px #ffcc00, 0 0 60px #ff0000;
 }
 h1{
-  color: gold;
-  font-size: 60px;
-  animation: glow 2s infinite alternate;
+  font-size: 55px;
+  color: #FFD700;
   margin-bottom: 20px;
+  text-shadow: 0 0 10px #FFD700, 0 0 20px #FF4500;
+  animation: glowText 2s infinite alternate;
 }
 p{
   font-size: 20px;
-  line-height:1.6;
-  margin-bottom: 25px;
+  line-height:1.8;
   text-align: justify;
+  color: #ffffff;
+  text-shadow: 0 0 5px #00ffff, 0 0 10px #ff00ff;
 }
 #from-name{
-  color:#00ffcc;
+  font-size:22px;
+  margin-top:20px;
+  font-weight:bold;
+  text-shadow: 0 0 10px #00ffcc;
+}
+button{
+  margin-top:20px;
+  padding:10px 25px;
+  font-size:18px;
+  background: #ffcc00;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  animation: glowBtn 2s infinite alternate;
+}
+.credit{
+  position:absolute;
+  right:20px;
+  bottom:20px;
+  font-size:18px;
+  font-weight:bold;
+  color:#00ffff;
+  text-shadow: 0 0 5px #00ffff, 0 0 10px #ff00ff, 0 0 20px #00ffff;
+  animation: glowFooter 2s infinite alternate;
+}
+@keyframes glowText{
+  0%{text-shadow: 0 0 10px #FFD700, 0 0 20px #FF4500;}
+  50%{text-shadow: 0 0 15px #00ffff, 0 0 30px #ffff00;}
+  100%{text-shadow: 0 0 20px #ff69b4, 0 0 40px #00ff00;}
+}
+@keyframes glowBtn{
+  from{ box-shadow: 0 0 5px #ffcc00; }
+  to{ box-shadow: 0 0 20px #ff0000; }
+}
+@keyframes glowFooter{
+  0%{ text-shadow: 0 0 5px #00ffff, 0 0 10px #ff00ff, 0 0 20px #00ffff; color:#00ffff;}
+  50%{ text-shadow: 0 0 10px #ff69b4, 0 0 20px #ffff00, 0 0 30px #00ff00; color:#ff69b4;}
+  100%{ text-shadow: 0 0 15px #ffcc00, 0 0 30px #ff4500, 0 0 40px #ffffff; color:#ffcc00;}
+}
+.firework{
+  position:absolute;
+  width:6px;
+  height:6px;
+  animation: explode 1.5s infinite;
+}
+@keyframes explode{
+  0%{ box-shadow:none; }
+  100%{
+    box-shadow:
+    0 -120px red,
+    85px -85px yellow,
+    120px 0 cyan,
+    85px 85px lime,
+    0 120px magenta,
+    -85px 85px orange,
+    -120px 0 white,
+    -85px -85px pink;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+  <h1>🎉 Happy New Year 2026 🎉</h1>
+  <p>
+    ✨ Assalamu Alaikum ITS Grouper সকল মেম্বারদের জানাই নতুন বছরের শুভেচ্ছা।<br>
+    🌟 নতুন বছর টা শুরু হওক সবার হাসি, খুশি, মায়া, মমতা আর ভালোবাসা দিয়ে।<br>
+    💖 আসুন আমরা সবাই একসাথে মিলেমিশে নতুন বছর টা শুরু করি।<br>
+    🎀 ITS গ্রুপের সবাইকে জানাই প্রাণভরা মায়া আর ভালোবাসা।<br>
+    📚 আমরা যেনো নতুন বছরে নতুন কিছু শিখতে পারি।
+  </p>
+  <div id="from-name">— জীবন খান</div>
+  <button onclick="document.getElementById('bgMusic').play()">🎵 Play Music</button>
+</div>
+
+<div class="firework"></div>
+<div class="credit">CRATER BY DX JIBON</div>
+
+<audio id="bgMusic" loop>
+  <source src="yourSong.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+// Members Names + Color Loop
+const members = [
+  "ᶦƬˢ⃝🎀🇽‌ᴀᴛᴋᴀ﷽",
+  "ᶦƬˢ⃝🎀🇲‌ᴇʜᴇᴅɪ﷽",
+  "ᶦƬˢ⃝🎀🇷‌ᴀʏʜᴀɴ﷽",
+  "ᶦƬˢ⃝🎀🇸‌ʜᴀᴡᴏɴ﷽",
+  "ᶦƬˢ⃝🎀🇮‌ᴋʀᴀᴍ﷽",
+  "ᶦƬˢ⃝🎀🇨‌ʀᴜsʜ﷽",
+  "ᶦƬˢ⃝🎀🇭‌ʀɪᴅᴏʏ﷽",
+  "ᶦƬˢ⃝🎀🇮‌ᴍʀᴀɴ﷽"
+];
+const colors = ["#ff0000","#00ff00","#00ffff","#ff00ff","#ffff00","#ff8800","#ffffff","#00ffff"];
+let i = 0;
+function showName(){
+    const nameDiv = document.getElementById("from-name");
+    nameDiv.innerText = "— " + members[i];
+    nameDiv.style.color = colors[i % colors.length];
+    i++;
+    if(i >= members.length) i = 0;
+}
+setInterval(showName, 3000); // প্রতি ৩ সেকেন্ডে নাম পরিবর্তন
+</script>
+
+</body>
+</html>  color:#00ffcc;
   font-size:22px;
   margin-top:20px;
 }
