--- a/index.html
+++ b/index.html
@@ -4,37 +4,146 @@
 <meta charset="UTF-8">
 <title>Happy New Year 2026</title>
 <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{
 margin:0;
 padding:0;
 height:100vh;
-background:#0d0d0d;
 font-family:'Gemunu Libre',sans-serif;
-overflow:auto;
+overflow:hidden;
 color:white;
+background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #0d0d0d, #1a1a1a);
+background-size: 400% 400%;
+animation: gradientBG 15s ease infinite;
+display:flex;
+justify-content:center;
+align-items:center;
+}
+@keyframes gradientBG {
+0%{background-position:0% 50%;}
+50%{background-position:100% 50%;}
+100%{background-position:0% 50%;}
 }
 .container{
-text-align:center;
-max-width:900px;
-margin:auto;
-padding:30px;
+width:95%;
+max-width:480px;
+padding:20px;
 background:rgba(0,0,0,0.25);
 border-radius:20px;
 box-shadow:0 0 40px #FFD700,0 0 80px #FF4500 inset;
-position:relative;
-top:50%;
-transform:translateY(-50%);
+text-align:center;
 }
 h1{
-font-size:48px;
-margin-bottom:20px;
+font-size:32px;
+margin-bottom:15px;
 color:#FFD700;
-text-shadow:0 0 20px #FFD700,0 0 40px #FF4500,0 0 60px #FF69B4;
+text-shadow:0 0 15px #FFD700,0 0 30px #FF4500,0 0 45px #FF69B4;
 animation:glowText 1.5s infinite alternate;
 }
 p{
-font-size:17px;
+font-size:16px;
+line-height:1.45;
+color:#ffffff;
+text-shadow:0 0 6px #00ffff,0 0 12px #ff00ff;
+}
+#from-name{
+font-size:20px;
+font-weight:bold;
+margin-top:15px;
+text-shadow:0 0 12px #ff69b4,0 0 25px #00ffff,0 0 35px #ffff00;
+transition:all 1s ease;
+}
+.credit{
+font-size:14px;
+font-weight:bold;
+color:#00ffff;
+text-shadow:0 0 6px #00ffff,0 0 12px #ff00ff,0 0 20px #00ffff;
+position:absolute;
+bottom:10px;
+right:10px;
+}
+.particle{
+position:absolute;
+width:4px;
+height:4px;
+background:#fff;
+border-radius:50%;
+opacity:0.8;
+animation:sparkle 3s infinite;
+}
+@keyframes glowText{
+0%{text-shadow:0 0 15px #FFD700,0 0 30px #FF4500,0 0 45px #FF69B4;}
+50%{text-shadow:0 0 18px #00ffff,0 0 35px #ff00ff,0 0 50px #ffff00;}
+100%{text-shadow:0 0 20px #ffcc00,0 0 40px #ff4500,0 0 60px #ffffff;}
+}
+@keyframes sparkle{
+0%{transform:translate(0,0) scale(1);opacity:1;}
+50%{transform:translate(var(--x),var(--y)) scale(1.3);opacity:0.5;}
+100%{transform:translate(0,0) scale(1);opacity:0;}
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+<h1>🎊✨ Happy New Year 2026 ✨🎊</h1>
+
+<p>
+🌙✨ <b>আসসালামু আলাইকুম</b> ✨🌙<br>
+🎊🎉 সবাইকে জানাই <b>Happy New Year 2026</b> 🎉🎊<br>
+💖 আমাদের প্রিয় Likee ফ্যামিলি<br>
+👉 <b>ITS LOVE FAMILY</b> 👈 🤝<br>
+🤲 আল্লাহ তায়ালা যেন আমাদের সবার জীবনে<br>
+😊 সুখ 🕊️ শান্তি 💪 সুস্থতা 🌸 আর অফুরন্ত বরকত দান করেন<br>
+❤️ ২০২৬ সালে আমরা সবাই একে অপরের পাশে থাকি<br>
+🤍 ভালোবাসা 🤝 সম্মান 🔒 বিশ্বাসে<br>
+মিলে মিশে <b>একটা পরিবার, একটা পেজ</b> হয়ে থাকি ✨<br>
+🌟 সম্পর্কগুলো যেন আরও সুন্দর হয়<br>
+🌟 ভুল বোঝাবুঝি দূরে থাকে<br>
+🌟 <b>ITS LOVE FAMILY</b> সবসময় একসাথে থাকে<br>
+🤍🤍 দোয়া ও ভালোবাসা রইলো সবার জন্য 🤍🤍
+</p>
+
+<div id="from-name">— ITS LOVE FAMILY</div>
+</div>
+
+<div class="credit">CREATED BY DX JIBON</div>
+
+<script>
+const members=[
+"ᶦƬˢ⃝🎀🇽‌ᴀᴛᴋᴀ﷽",
+"ᶦƬˢ⃝🎀🇲‌ᴇʜᴇᴅɪ﷽",
+"ᶦƬˢ⃝🎀🇷‌ᴀʏʜᴀɴ﷽",
+"ᶦƬˢ⃝🎀🇸‌ʜᴀᴡᴏɴ﷽",
+"ᶦƬˢ⃝🎀🇮‌ᴋʀᴀᴍ﷽",
+"ᶦƬˢ⃝🎀🇨‌ʀᴜsʜ﷽",
+"ᶦƬˢ⃝🎀🇭‌ʀɪᴅᴏʏ﷽",
+"ᶦƬˢ⃝🎀🇮‌ᴍʀᴀɴ﷽"
+];
+const colors=["#ff0000","#00ff00","#00ffff","#ff00ff","#ffff00","#ff8800","#ffffff","#00ffff"];
+let i=0;
+function showName(){
+const nameDiv=document.getElementById("from-name");
+nameDiv.innerText="— "+members[i];
+nameDiv.style.color=colors[i%colors.length];
+i++; if(i>=members.length)i=0;
+}
+setInterval(showName,2000);
+
+for(let j=0;j<40;j++){
+const p=document.createElement('div');
+p.className='particle';
+const x=Math.random()*window.innerWidth-window.innerWidth/2+'px';
+const y=Math.random()*window.innerHeight-window.innerHeight/2+'px';
+p.style.setProperty('--x',x);
+p.style.setProperty('--y',y);
+document.body.appendChild(p);
+}
+</script>
+
+</body>
+</html>font-size:17px;
 line-height:1.45;
 color:#ffffff;
 text-shadow:0 0 8px #00ffff,0 0 15px #ff00ff;
